--- a/css/navbar.css
+++ b/css/navbar.css
@@ -20,6 +20,9 @@
     display: flex;
     justify-content: space-between;
     width: auto;
+    margin: 0 -8px;
+    user-select: none;
+    box-sizing: content-box;
 }
 
 .nav-link {
@@ -192,8 +195,45 @@
     box-sizing: content-box;
 }
 
+/* mobile */
+.nav-mobile-ul {
+    display: none;
+    position: absolute;
+    z-index: 5;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 48px;
+    overflow: hidden;
+}
 
 
+
+/* for small screen */
+@media only screen and (max-width: 833px) {
+    .nav-ul {
+        visibility: hidden;
+        position: absolute;
+        z-index: 1;
+        overflow-y: auto;
+        top: 3.52941em;
+        display: block;
+        max-width: 664px;
+        box-sizing: border-box;
+    }
+
+    .nav-div {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        padding: 0;
+        top: 0;
+    }
+
+    .nav-mobile-ul {
+        display: block;
+    }
+}
 
 
 
